--- a/TrackCoach/Base.lproj/Main.storyboard
+++ b/TrackCoach/Base.lproj/Main.storyboard
@@ -344,13 +344,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l1k-H9-XFT">
-                                <rect key="frame" x="0.0" y="57" width="600" height="943"/>
+                                <rect key="frame" x="0.0" y="77" width="600" height="923"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hFB-D5-Fdg" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="700"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PbV-SZ-Ayb">
-                                                <rect key="frame" x="248" y="305" width="104" height="36"/>
+                                                <rect key="frame" x="248" y="295" width="104" height="36"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <state key="normal" title="Contact Me">
                                                     <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -360,14 +360,12 @@
                                                 </connections>
                                             </button>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="With TrackCoach, you can simply time races, and easily share them!" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eai-uI-LuV">
-                                                <rect key="frame" x="106" y="32" width="484" height="33"/>
-                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                <rect key="frame" x="106" y="22" width="484" height="33"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vPF-60-vEQ">
-                                                <rect key="frame" x="10" y="86" width="580" height="150"/>
-                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                <rect key="frame" x="10" y="76" width="580" height="150"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" priority="250" constant="150" id="npF-3j-ceA"/>
                                                 </constraints>
@@ -394,14 +392,14 @@ More features on the way!
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="4M9-6W-Ot6">
-                                                <rect key="frame" x="10" y="10" width="76" height="76"/>
+                                                <rect key="frame" x="10" y="0.0" width="76" height="76"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="76" id="nCd-xn-5HR"/>
                                                     <constraint firstAttribute="height" constant="76" id="nl7-t8-htU"/>
                                                 </constraints>
                                             </imageView>
                                         </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" red="0.98039215686274506" green="0.98039215686274506" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstItem="vPF-60-vEQ" firstAttribute="top" relation="greaterThanOrEqual" secondItem="eai-uI-LuV" secondAttribute="bottom" id="3sj-zA-VrT"/>
                                             <constraint firstItem="eai-uI-LuV" firstAttribute="leading" secondItem="4M9-6W-Ot6" secondAttribute="trailing" constant="20" id="65T-FP-1WQ"/>
@@ -413,6 +411,7 @@ More features on the way!
                                             <constraint firstAttribute="width" constant="600" id="Fq1-gl-B1Q"/>
                                             <constraint firstAttribute="centerX" secondItem="PbV-SZ-Ayb" secondAttribute="centerX" id="J2Z-xJ-B3x"/>
                                             <constraint firstItem="vPF-60-vEQ" firstAttribute="top" secondItem="4M9-6W-Ot6" secondAttribute="bottom" priority="250" id="Qzy-wx-ZaR"/>
+                                            <constraint firstItem="4M9-6W-Ot6" firstAttribute="top" secondItem="hFB-D5-Fdg" secondAttribute="top" id="ZhI-je-rUK"/>
                                             <constraint firstAttribute="bottom" secondItem="hsx-3j-I5c" secondAttribute="bottom" constant="20" id="Zub-k1-6ZU"/>
                                             <constraint firstAttribute="height" priority="250" constant="700" id="cR9-4F-T0l"/>
                                             <constraint firstItem="PbV-SZ-Ayb" firstAttribute="top" secondItem="vPF-60-vEQ" secondAttribute="bottom" constant="69" id="eWv-Lf-rKH"/>
@@ -423,6 +422,7 @@ More features on the way!
                                         </constraints>
                                     </view>
                                 </subviews>
+                                <color key="backgroundColor" red="0.98039215686274506" green="0.98039215686274506" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="hFB-D5-Fdg" secondAttribute="trailing" id="LDm-Qa-qxu"/>
                                     <constraint firstItem="hFB-D5-Fdg" firstAttribute="leading" secondItem="l1k-H9-XFT" secondAttribute="leading" id="Oix-y9-jsf"/>
@@ -431,7 +431,7 @@ More features on the way!
                                 </constraints>
                             </scrollView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rkb-C6-eLL" userLabel="Title View">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="57"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="57"/>
                                 <subviews>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About TrackCoach" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h4w-Uj-PzT">
                                         <rect key="frame" x="227" y="25" width="146" height="21"/>
@@ -462,12 +462,9 @@ More features on the way!
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="eai-uI-LuV" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Rkb-C6-eLL" secondAttribute="bottom" constant="10" id="AE1-GV-Bt4"/>
                             <constraint firstAttribute="bottomMargin" secondItem="l1k-H9-XFT" secondAttribute="bottom" id="DKz-bs-7Ix"/>
-                            <constraint firstItem="4M9-6W-Ot6" firstAttribute="top" secondItem="Rkb-C6-eLL" secondAttribute="bottom" priority="250" constant="10" id="E2l-u9-BAG"/>
                             <constraint firstItem="l1k-H9-XFT" firstAttribute="leading" secondItem="S7T-kg-ov0" secondAttribute="leadingMargin" constant="-16" id="H2L-oY-ehw"/>
-                            <constraint firstItem="Rkb-C6-eLL" firstAttribute="top" secondItem="PKK-Jg-Ixs" secondAttribute="bottom" constant="-20" id="Jis-yW-w3i"/>
-                            <constraint firstItem="4M9-6W-Ot6" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Rkb-C6-eLL" secondAttribute="bottom" constant="10" id="K0k-0r-Qia"/>
+                            <constraint firstItem="Rkb-C6-eLL" firstAttribute="top" secondItem="PKK-Jg-Ixs" secondAttribute="top" id="Jis-yW-w3i"/>
                             <constraint firstAttribute="trailingMargin" secondItem="l1k-H9-XFT" secondAttribute="trailing" constant="-16" id="TyI-ft-wvF"/>
                             <constraint firstItem="l1k-H9-XFT" firstAttribute="top" secondItem="Rkb-C6-eLL" secondAttribute="bottom" id="Yr1-rz-RBs"/>
                             <constraint firstAttribute="trailing" secondItem="Rkb-C6-eLL" secondAttribute="trailing" id="e9e-nN-4zZ"/>
